--- a/console/jhipster-console.yml
+++ b/console/jhipster-console.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jhipster-console
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-console
-  namespace: userr8me
+  namespace: default
   labels:
     app: jhipster-console
 spec:
