--- a/console/jhipster-elasticsearch.yml
+++ b/console/jhipster-elasticsearch.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: es-config
-  namespace: userr8me
+  namespace: default
 data:
   discovery.type: zen
   minimum.master.nodes: '1'
@@ -19,7 +19,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: jhipster-elasticsearch-master
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: master
@@ -169,7 +169,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: jhipster-elasticsearch-data
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: data
@@ -315,7 +315,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jhipster-elasticsearch-client
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: client
@@ -415,8 +415,8 @@ spec:
                   key: path.logs
           resources:
             requests:
-              memory: '512Mi'
-              cpu: '200m'
+              memory: '256Mi'
+              cpu: '1508m'
             limits:
               memory: '1024Mi'
               cpu: '400m'
@@ -443,7 +443,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-elasticsearch-discovery
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: master
@@ -461,7 +461,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-elasticsearch-data
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: data
@@ -479,7 +479,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-elasticsearch
-  namespace: userr8me
+  namespace: default
   labels:
     component: jhipster-elasticsearch
     role: client
