--- a/console/jhipster-logstash.yml
+++ b/console/jhipster-logstash.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jhipster-logstash
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -40,7 +40,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-logstash
-  namespace: userr8me
+  namespace: default
   labels:
     app: jhipster-logstash
 spec:
