--- a/messagebroker/kafka.yml
+++ b/messagebroker/kafka.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jhipster-kafka
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -32,7 +32,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-kafka
-  namespace: userr8me
+  namespace: default
 spec:
   selector:
     app: jhipster-kafka
@@ -43,7 +43,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: jhipster-zookeeper
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -71,7 +71,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: jhipster-zookeeper
-  namespace: userr8me
+  namespace: default
 spec:
   selector:
     app: jhipster-zookeeper
