--- a/pom.xml
+++ b/pom.xml
@@ -635,7 +635,7 @@
                             <image>adoptopenjdk:11-jre-hotspot</image>
                         </from>
                         <to>
-                            <image>r8meuserservice2:latest</image>
+                            <image>gcr.io/r8me-262821/r8meuserservice2:${project.version}</image>
                         </to>
                         <container>
                             <entrypoint>
@@ -666,7 +666,7 @@
                         <defaultSchemaName></defaultSchemaName>
                         <username>r8meuserservice2</username>
                         <password></password>
-                        <referenceUrl>hibernate:spring:com.akulinski.r8meservice.domain?dialect=org.hibernate.dialect.H2Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
+                        <referenceUrl>hibernańgcte:spring:com.akulinski.r8meservice.domain?dialect=org.hibernate.dialect.H2Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
                         <logging>debug</logging>
                         <contexts>!test</contexts>
