--- a/r8meuserservice2/r8meuserservice2-deployment.yml
+++ b/r8meuserservice2/r8meuserservice2-deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: r8meuserservice2
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -34,44 +34,43 @@ spec:
               done
       containers:
         - name: r8meuserservice2-app
-          image: gcr.io/r8me/r8meuserservice2
+          image: gcr.io/r8me-262821/r8meuserservice2:0.0.1-SNAPSHOT
           env:
+            - name: JHIPSTER_CACHE_REDIS_SERVER
+              value: redis://r8meuserservice2-redis:6379
             - name: SPRING_PROFILES_ACTIVE
               value: prod
             - name: SPRING_CLOUD_CONFIG_URI
-              value: http://admin:${jhipster.registry.password}@jhipster-registry.userr8me.svc.cluster.local:8761/config
+              value: http://admin:${jhipster.registry.password}@jhipster-registry.default.svc.cluster.local:8761/config
             - name: JHIPSTER_REGISTRY_PASSWORD
               valueFrom:
                 secretKeyRef:
                   name: registry-secret
                   key: registry-admin-password
             - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
-              value: http://admin:${jhipster.registry.password}@jhipster-registry.userr8me.svc.cluster.local:8761/eureka/
+              value: http://admin:${jhipster.registry.password}@jhipster-registry.default.svc.cluster.local:8761/eureka/
             - name: SPRING_DATASOURCE_URL
-              value: jdbc:postgresql://r8meuserservice2-postgresql.userr8me.svc.cluster.local:5432/r8meuserservice2
+              value: jdbc:postgresql://r8meuserservice2-postgresql.default.svc.cluster.local:5432/r8meuserservice2
             - name: SPRING_DATASOURCE_USERNAME
-              value: r8meuserservice2
+              value: r8me
             - name: SPRING_DATASOURCE_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: r8meuserservice2-postgresql
-                  key: postgresql-password
+              value: password
             - name: SPRING_DATA_JEST_URI
-              value: http://r8meuserservice2-elasticsearch.userr8me.svc.cluster.local:9200
+              value: http://r8meuserservice2-elasticsearch.default.svc.cluster.local:9200
             - name: SPRING_ELASTICSEARCH_REST_URIS
-              value: http://r8meuserservice2-elasticsearch.userr8me.svc.cluster.local:9200
+              value: http://r8meuserservice2-elasticsearch.default.svc.cluster.local:9200
             - name: KAFKA_CONSUMER_KEY_DESERIALIZER
               value: 'org.apache.kafka.common.serialization.StringDeserializer'
             - name: KAFKA_CONSUMER_VALUE_DESERIALIZER
               value: 'org.apache.kafka.common.serialization.StringDeserializer'
             - name: KAFKA_CONSUMER_BOOTSTRAP_SERVERS
-              value: 'jhipster-kafka.userr8me.svc.cluster.local:9092'
+              value: 'jhipster-kafka.default.svc.cluster.local:9092'
             - name: KAFKA_CONSUMER_GROUP_ID
               value: 'r8meuserservice2'
             - name: KAFKA_CONSUMER_AUTO_OFFSET_RESET
               value: 'earliest'
             - name: KAFKA_PRODUCER_BOOTSTRAP_SERVERS
-              value: 'jhipster-kafka.userr8me.svc.cluster.local:9092'
+              value: 'jhipster-kafka.default.svc.cluster.local:9092'
             - name: KAFKA_PRODUCER_KEY_DESERIALIZER
               value: 'org.apache.kafka.common.serialization.StringDeserializer'
             - name: KAFKA_PRODUCER_VALUE_DESERIALIZER
@@ -106,3 +105,5 @@ spec:
               path: /management/info
               port: http
             initialDelaySeconds: 120
+      imagePullSecrets:
+        - name: gcr-secret
