--- a/r8meuserservice2/r8meuserservice2-elasticsearch.yml
+++ b/r8meuserservice2/r8meuserservice2-elasticsearch.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: r8meuserservice2-elasticsearch
-  namespace: userr8me
+  namespace: default
 spec:
   replicas: 1
   selector:
@@ -43,7 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: r8meuserservice2-elasticsearch
-  namespace: userr8me
+  namespace: default
 spec:
   selector:
     app: r8meuserservice2-elasticsearch
