--- a/registry/application-configmap.yml
+++ b/registry/application-configmap.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: application-config
-  namespace: userr8me
+  namespace: default
 #common configuration shared between all applications
 data:
   application.yml: |-
