--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -187,5 +187,5 @@ kafka:
 # ===================================================================
 
 # application:
-scheduler:
-  profilecalc: 1000
+scheduling:
+  enabled: true
