Implemented endpoint for getting comments for current user

--- a/pom.xml
+++ b/pom.xml
@@ -681,7 +681,7 @@
                         <defaultSchemaName></defaultSchemaName>
                         <username>r8meuserservice2</username>
                         <password></password>
-                        <referenceUrl>hibernańgcte:spring:com.akulinski.r8meservice.domain?dialect=org.hibernate.dialect.H2Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
+                        <referenceUrl>hibernate:spring:com.akulinski.r8meservice.domain?dialect=org.hibernate.dialect.H2Dialect&amp;hibernate.physical_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy&amp;hibernate.implicit_naming_strategy=org.springframework.boot.orm.jpa.hibernate.SpringImplicitNamingStrategy</referenceUrl>
                         <verbose>true</verbose>
                         <logging>debug</logging>
                         <contexts>!test</contexts>
@@ -846,8 +846,15 @@
                             <exclude>**/*IT*</exclude>
                             <exclude>**/*IntTest*</exclude>
                         </excludes>
+                        <properties>
+                            <property>
+                                <name>listener</name>
+                                <value>com.akulinski.r8meservice.PrintOutCurrentTestRunListener</value>
+                            </property>
+                        </properties>
                     </configuration>
                 </plugin>
+
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-failsafe-plugin</artifactId>
