--- a/.travis.yml
+++ b/.travis.yml
@@ -42,9 +42,9 @@ install:
 script:
   - chmod +x mvnw
   - ./mvnw -ntp checkstyle:check
-  - ./mvnw -ntp clean verify
+  - ./mvnw -ntp clean test
   - ./mvnw -ntp com.github.eirslett:frontend-maven-plugin:npm -Dfrontend.npm.arguments='run test' -Dmaven.repo.local=$MAVEN_USER_HOME
-  - ./mvnw -ntp verify -Pprod -DskipTests
+  - ./mvnw -ntp test -Pprod -DskipTests
 notifications:
   webhooks:
     on_success: change # options: [always|never|change] default: always
