Implmented user Authorizaiton to resource
Methods Annotated with custom annotation are checked for ownership

--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -167,7 +167,7 @@ jhipster:
     retention-period: 30 # Number of days before audit events are deleted.
 
 scheduler:
-  profilecalc: 1000
+  profilecalc: 10000000
 
 mock:
   comments: 10
